samples/_failures_safe/1761161231_1c7afb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdc2c057.c: In function ‘main’:
./samples/SAFE/__tmp_fdc2c057.c:182:9: error: expected declaration or statement at end of input
  182 |         fprintf(stderr, "No tokens found\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_fdc2c057.c:182:9: error: expected declaration or statement at end of input
